--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
   margin: 0;
 }
 body {
-  background-color: rgb(16, 36, 53);
+  background-color: rgba(8, 85, 153, 0.664);
+  /* background-image: url(bg.webp); */
+  /* background-size: cover; */
   color: white;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
